# hospitopt-rs

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
entity/: Cargo.toml
entity/src/: hospital.rs  hospital_speciality.rs  hospital_specialty.rs  lib.rs  patient.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251005_195352_hospitals.rs  m20251006_210502_patients.rs  m20251006_211530_beds_per_speciality.rs  m20251007_182626_rename_speciality_to_triage.rs
scripts/: Cargo.toml
scripts/src/: hospitals.rs  main.rs  patients.rs
src/: main.rs
src/google_maps/: mod.rs  routes.rs
src/optimization/: cp.rs  routes.rs  solver.rs
