[package]
name = "hospitopt-rs"
authors = ["Daniel Sousa <danielsoussa@gmail.com>"]
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration", "scripts"]

[dependencies]
anyhow = "1"
dotenvy = "0.15"
entity = { path = "entity" }
google_maps = "3.8.3"
sea-orm = { version = "1.1.16", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
